Version 5.3.0.12
racket/base: added impersonate-continuation-mark-key,
chaperone-continuation-mark-key, make-continuation-mark-key,
continuation-mark-key?

Version 5.3.0.11
Changed contract on date second field to disallow 61, since
 leap seconds never appear more than once per minute
racket/base: added impersonate-prompt-tag & chaperone-prompt-tag
racket/control: added call/prompt, call/comp, abort/cc and
 allow #:tag argument for % and f-control
racket/future: handling of internal stack overflow without
 necessarily blocking on process 0; added 'overflow and
 'start-overflow-work log events
racket/base: guarantee portable results for current-seconds
 and file-or-directory-modify-seconds
compiler/zo-structs: added a context field to all-from-module
racket/list: added optional arguments to add-between, including
 #:splice?, #:before-first, #:before-last, and #:after-last

Version 5.3.0.10
racket/base: add progress-evt?, thread-cell-values?, prefab-key?,
 semaphore-peek-evt?, channel-put-evt?
Changed #lang for most languages so that it cannot be nested;
 this change is within syntax/module-reader and applies to
 racket, racket/base, and more
racket/com: don't always infer 'any for the element type of a
 multidimensional array 
Changed local-expand to not add core forms if the stop list has
 just module*
racket/math: added degrees->radians, radians->degrees, nan?,
 infinite?, exact-round, exact-floor, exact-ceiling, exact-truncate;
 fixed sinh and tanh to return correct answers given extreme and non-
 rational values like -inf.0, -0.0, -min.0 (see unstable/flonum for
 definition); fixed handling of single flonums in sinh, cosh, tanh
 and sgn

Version 5.3.0.9
Changed the format of error messages
Added raise-argument-error, raise-result-error,
 raise-arguments-error, raise-range-error
racket/contract: added procedure-arity-includes/c
racket/sandbox: added sandbox-propagate-exceptions
racket/cmdline: add #:ps for command-line